<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="?attr/colorAccent">

        <ImageView
            android:id="@+id/imgBicycle"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal">
        </ImageView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/bicycleDetailsLayout">

            <TextView
                android:id="@+id/txtOwner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/owner"
                style="@style/bicycleDetailsDescription" />

            <TextView
                android:id="@+id/owner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                style="@style/bicycleDetailsValue" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/bicycleDetailsLayout">


        <TextView
                android:id="@+id/txtBrand"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/brand"
                style="@style/bicycleDetailsDescription" />

            <TextView
                android:id="@+id/brand"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                style="@style/bicycleDetailsValue" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/bicycleDetailsLayout">


        <TextView
                android:id="@+id/txtName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/name"
                style="@style/bicycleDetailsDescription" />

            <TextView
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                style="@style/bicycleDetailsValue" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/bicycleDetailsLayout">


        <TextView
                android:id="@+id/txtCategory"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/category"
                style="@style/bicycleDetailsDescription" />

            <TextView
                android:id="@+id/category"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                style="@style/bicycleDetailsValue" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/list_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/repairsDetailsTitle" />

            <ListView
                android:id="@+id/repair_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>
</ScrollView>